--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 //git add .
 //git commit -m "update vercel.json"
 //git push origin main
+
+{
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
+}
